# AudioDown-Core

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
.superpowers/sdd/: task-13-report.md
crates/audiodown-content/: Cargo.toml
crates/audiodown-content/src/: cursor.rs  dedup.rs  lib.rs  router.rs
crates/audiodown-content/tests/: aggregation.rs  cursor.rs  dedup.rs  routing.rs
crates/audiodown-credential-vault/: Cargo.toml
crates/audiodown-credential-vault/src/: crypto.rs  key_store.rs  lib.rs  secret.rs  service.rs
crates/audiodown-credential-vault/tests/: crypto.rs  key_store.rs  service.rs
crates/audiodown-domain/: Cargo.toml
crates/audiodown-domain/src/: credential.rs  lib.rs  log.rs  plugin.rs
crates/audiodown-domain/tests/: credential.rs
crates/audiodown-logging/: Cargo.toml
crates/audiodown-logging/src/: lib.rs  redaction.rs
crates/audiodown-logging/tests/: redaction.rs
crates/audiodown-network-proxy/: Cargo.toml
crates/audiodown-network-proxy/src/: cookie_jar.rs  credential.rs  error.rs  http.rs  lib.rs  policy.rs  resolver.rs  service.rs
crates/audiodown-network-proxy/tests/: cookie_jar.rs  credential_proxy.rs  http.rs  policy.rs
crates/audiodown-plugin-api/: Cargo.toml
crates/audiodown-plugin-api/src/: content.rs  credential.rs  error.rs  lib.rs  manifest.rs  repository.rs  rpc.rs
crates/audiodown-plugin-api/tests/: content_contracts.rs  contracts.rs  credential_contracts.rs  repository_contracts.rs
crates/audiodown-plugin-manager/: Cargo.toml
crates/audiodown-plugin-manager/src/: archive.rs  github.rs  lib.rs  package.rs  service.rs  staging.rs  validation.rs
crates/audiodown-plugin-manager/tests/: archive_safety.rs  content_invocation.rs  github_client.rs  github_source.rs  inspection_service.rs  install_service.rs  lifecycle_service.rs  management_service.rs  repository_validation.rs  staging.rs
crates/audiodown-proxy-gateway/: Cargo.toml
crates/audiodown-proxy-gateway/src/: lib.rs  main.rs
crates/audiodown-proxy-gateway/tests/: relay.rs
crates/audiodown-server/: Cargo.toml  build.rs
crates/audiodown-server/src/: app.rs  config.rs  content_adapters.rs  lib.rs  lifecycle.rs  main.rs  plugin_manager_adapters.rs  proxy_adapters.rs  proxy_gateway.rs  shutdown.rs  state.rs  supervisor.rs  web.rs
crates/audiodown-server/src/routes/: content.rs  health.rs  logs.rs  mod.rs  plugins.rs  repositories.rs  system.rs
crates/audiodown-server/tests/: content_api.rs  development_config.rs  http_api.rs  lifecycle_reconciler.rs  plugin_install_api.rs  plugin_management_api.rs  proxy_gateway.rs  repository_api.rs  supervisor_client.rs  web_assets.rs
crates/audiodown-storage/: Cargo.toml
crates/audiodown-storage/src/: content_routing_repository.rs  credential_repository.rs  lib.rs  log_repository.rs  plugin_repository.rs  risk_grant_repository.rs
crates/audiodown-storage/tests/: content_routing.rs  credentials.rs  plugin_installation.rs  storage.rs
crates/audiodown-supervisor/: Cargo.toml
crates/audiodown-supervisor-protocol/: Cargo.toml
crates/audiodown-supervisor-protocol/src/: lib.rs
crates/audiodown-supervisor-protocol/tests/: contracts.rs
crates/audiodown-supervisor/src/: build_proxy.rs  builder.rs  config.rs  docker.rs  docker_build.rs  install_operation.rs  install_record.rs  lib.rs  main.rs  policy.rs  prepared_install.rs  protocol.rs  server.rs  trusted_images.rs
crates/audiodown-supervisor/tests/: build_policy.rs  build_proxy.rs  content_rpc.rs  docker_build.rs  install_operation.rs  policy.rs  prepared_install.rs  protocol.rs  remove_policy.rs
docker/: core.Dockerfile  plugin-gateway.Dockerfile  supervisor.Dockerfile
docker/plugin-runtime/: node22-build-runner.js  node22-builder.Dockerfile  node22-runtime.Dockerfile  node22.Dockerfile  node22.lock.json  plugin-token-bootstrap.sh
docs/: phase-1-acceptance.md  phase-2-acceptance.md  phase-3-acceptance.md
docs/superpowers/plans/: 2026-07-11-audiodown-1-foundation-implementation-plan.md  2026-07-11-audiodown-2-plugin-installation-implementation-plan.md  2026-07-11-audiodown-mcp-ui-redesign-implementation-plan.md  2026-07-12-audiodown-3-content-aggregation-implementation-plan.md  2026-07-13-audiodown-4-credential-vault-implementation-plan.md
docs/superpowers/specs/: 2026-07-11-audiodown-1-plugin-platform-design.md
docs/ui/: mcp-component-map.md  ui-redesign-acceptance.md
migrations/: 0001_initial.sql  0002_plugin_installation.sql  0003_content_routing.sql  0004_credentials.sql
plugin-sdk/node/: package-lock.json  package.json
plugin-sdk/node/src/: content.js  credential.js  index.js  logger.js  proxy.js  rpc.js
plugin-sdk/node/test/: content.test.js  credential.test.js  proxy.test.js  rpc.test.js  sdk.test.js
scripts/: install-virtual-plugin.sh  verify.sh
test-fixtures/github-mock/: server.js
test-fixtures/plugins/virtual/: audiodown-plugin.json  package-lock.json  package.json
test-fixtures/repositories/virtual/: README.md  audiodown-repository.json
tests/: compose-smoke.sh  content-aggregation-security.sh  content-aggregation-smoke.sh  content-phase3-verification-wiring.sh  plugin-installation-security.sh  plugin-phase2-verification-wiring.sh  plugin-repository-smoke.sh  security-boundary.sh  virtual-content-contract.sh  virtual-plugin-smoke.sh  workspace-smoke.sh
web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  router.ts  styles.css
web/src/api/: client.ts
web/src/composables/: useSystemStatus.ts
web/src/styles/: base.css  tokens.css
web/src/views/: AlbumView.test.ts  AlbumView.vue  DiscoverView.test.ts  DiscoverView.vue  LogsView.vue  PluginsView.vue  SearchView.test.ts  SearchView.vue  SystemView.test.ts  SystemView.vue  content-empty-states.test.ts  empty-state.test.ts
web/tests/: accessibility.spec.ts  content-aggregation-live.spec.ts  plugin-installation-live.spec.ts  ui-shell.spec.ts
web/tests/fixtures/: mock-api.ts
web/tests/visual/: ui-visual.spec.ts
(+76 files in other folders)
