[workspace]
resolver = "2"
members = [
  "crates/audiodown-domain",
  "crates/audiodown-plugin-api",
  "crates/audiodown-storage",
  "crates/audiodown-logging",
  "crates/audiodown-server",
  "crates/audiodown-supervisor",
]

[workspace.package]
version = "1.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bollard = "0.19"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1.3"
regex = "1.11"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "signal", "time", "fs", "sync", "process", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
