[package]
name = "audiodown-credential-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
audiodown-domain = { path = "../audiodown-domain" }
ghash.workspace = true
polyval.workspace = true
rand_core.workspace = true
rustix.workspace = true
secrecy.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.20"

[target.'cfg(target_os = "macos")'.dev-dependencies]
exacl = "0.13"
