[package]
name = "audiodown-credential-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
async-trait.workspace = true
audiodown-domain = { path = "../audiodown-domain" }
audiodown-plugin-api = { path = "../audiodown-plugin-api" }
chrono.workspace = true
ghash.workspace = true
polyval.workspace = true
rand_core.workspace = true
rustix.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
zeroize = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dev-dependencies]
exacl = "0.13"
