[package]
name = "audiodown-network-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
audiodown-plugin-api = { path = "../audiodown-plugin-api" }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
