[package]
name = "audiodown-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
audiodown-domain = { path = "../audiodown-domain" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
