[package]
name = "audiodown-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
audiodown-domain = { path = "../audiodown-domain" }
audiodown-logging = { path = "../audiodown-logging" }
audiodown-plugin-api = { path = "../audiodown-plugin-api" }
audiodown-plugin-manager = { path = "../audiodown-plugin-manager" }
audiodown-storage = { path = "../audiodown-storage" }
axum.workspace = true
chrono.workspace = true
mime_guess.workspace = true
rust-embed.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
tempfile = "3.20"
