[package]
name = "audiodown-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
audiodown-domain = { path = "../audiodown-domain" }
audiodown-plugin-api = { path = "../audiodown-plugin-api" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
