[package]
name = "audiodown-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
audiodown-domain = { path = "../audiodown-domain" }
audiodown-plugin-api = { path = "../audiodown-plugin-api" }
audiodown-supervisor-protocol.workspace = true
base64.workspace = true
bollard.workspace = true
chrono.workspace = true
futures-util.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.20"
tokio = { workspace = true, features = ["test-util"] }
